# sdsclient-cpp

./: CMakeLists.txt  README.md  config.json  main.cpp
.github/workflows/: cmake.yml
depends/: b64.cmake  httplib.cmake  jsoncpp.cmake  sdl2-image.cmake  sdl2.cmake
